--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
                 <sonar.jdbc.url>
-            jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8
+            jdbc:mysql://localhost:3306/sonarr?useUnicode=true&amp;characterEncoding=utf8
         </sonar.jdbc.url>
-        <sonar.jdbc.username>sonar</sonar.jdbc.username>
-        <sonar.jdbc.password>sonar</sonar.jdbc.password>
+        <sonar.jdbc.username>sonarr</sonar.jdbc.username>
+        <sonar.jdbc.password>sonarr</sonar.jdbc.password>
         <sonar.host.url>http://localhost:9010/sonar</sonar.host.url>
     </properties>
 
